# eth-vanity-metal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  OPTIMIZATION_SUMMARY.md  README.md
.cargo/: config.toml
examples/: benchmark_init.rs  check_vector.rs  verify.rs
src/: address.rs  difficulty.rs  display.rs  hardware.rs  lib.rs  main.rs  search.rs  stats.rs
src/gpu/: keccak_fast.metal  mod.rs  native_search.rs  pipeline.rs  precompute.rs  profanity_batch.metal  profanity_batch.rs  search_native.metal
